# Examples for Processing2C translated 2026-01-29 16:31:14
# Add or remove EXCLUDE_FROM_ALL, if you want (not) compile a particular example\n

cmake_minimum_required(VERSION 3.5)
project(PROCESSING2C_EXAMPLES)

#LIBRARIES
add_subdirectory( "/data/wb/SCC/public/Processing2C/SYMSHELL" 
                  "/data/wb/SCC/public/Processing2C/SYMSHELL" )
add_subdirectory( "../lib/" 
                  "../lib/" )
add_subdirectory( "../tools/" 
                  "../tools/" )
#EXAMPLES
add_subdirectory( ALIGNMENT 	)
add_subdirectory( ALIGNMENT/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( ARCS 	)
add_subdirectory( ARCS/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( ARRAYLIST 	)
add_subdirectory( ARRAYLIST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( ARRAYTEST 	)
add_subdirectory( ARRAYTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( CLASSTEST 	)
add_subdirectory( CLASSTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( DICTSTEST 	)
add_subdirectory( DICTSTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( ELIPSY 	)
add_subdirectory( ELIPSY/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( EPIDEMIA 	)
add_subdirectory( EPIDEMIA/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( EVENTS 	)
add_subdirectory( EVENTS/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( FILES 	)
add_subdirectory( FILES/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( FORESTFIRE 	)
add_subdirectory( FORESTFIRE/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( FORMATS 	)
add_subdirectory( FORMATS/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( MAPTEST 	)
add_subdirectory( MAPTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( MROWKI 	)
add_subdirectory( MROWKI/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( PERLIN 	)
add_subdirectory( PERLIN/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( SAKODA 	)
add_subdirectory( SAKODA/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( SHAPES 	)
add_subdirectory( SHAPES/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( STRINGDICT 	)
add_subdirectory( STRINGDICT/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( STRINGTEST 	)
add_subdirectory( STRINGTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( SYNCHRONIC1 	)
add_subdirectory( SYNCHRONIC1/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( THISTEST 	)
add_subdirectory( THISTEST/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( TOCEVO 	)
add_subdirectory( TOCEVO/multi_cpp/ EXCLUDE_FROM_ALL 	)
add_subdirectory( WZROST 	)
add_subdirectory( WZROST/multi_cpp/ EXCLUDE_FROM_ALL 	)
